--- a/Netro_Local.html
+++ b/Netro_Local.html
@@ -17,7 +17,7 @@
 
 </div>
 
-<div id="container">
+<div id="container" style="width: 750px">
 
 
     <div style="float: left; margin-top: 18px; margin-left: 20px">
