--- a/Netro_Local.html
+++ b/Netro_Local.html
@@ -100,7 +100,7 @@
     <table class="tutorial">
         <tr>
             <td class="unfold">
-                <button class="button button-glow button-rounded button-royal">UNFOLD</button>
+                <button class="button button-glow button-rounded button-royal">FOLD</button>
             </td>
             <td class="hided">
                 <h1 class="texth">
